# BlockGame

./: CMakeLists.txt
Libraries/include/glad/: glad.h
Libraries/src/: glad.c
Source/: main.cpp
Source/Core/Application/: AppEvents.cpp  AppEvents.h  Application.cpp  Application.h
Source/Core/Blocks/: Block.cpp  Block.h  BlockDatabase.cpp  BlockDatabase.h
Source/Core/Chunks/: Chunk.cpp  Chunk.h
Source/Core/OpenGL/: IndexBuffer.cpp  IndexBuffer.h  OpenGL.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Source/Core/Player/: Camera.cpp  Camera.h  GUICamera.cpp  GUICamera.h  Player.cpp  Player.h
Source/Core/Rendering/: CubeRenderer.cpp  CubeRenderer.h  Frustum.cpp  Frustum.h  GUIRenderer.cpp  GUIRenderer.h  Renderer.cpp  Renderer.h  TextureManager.cpp  TextureManager.h
Source/Core/Utils/: Defaults.h  Logger.cpp  Logger.h  Maths.cpp  Maths.h  Raycast.cpp  Raycast.h  Timer.h  Vertex.h
Source/Core/World/: World.cpp  World.h  WorldGenerator.cpp  WorldGenerator.h
Source/Shaders/: BlockFragmentShader.glsl  BlockOutlineFragmentShader.glsl  BlockOutlineVertexShader.glsl  BlockVertexShader.glsl  GUIFragmentShader.glsl  GUIVertexShader.glsl
